external-projects/sui-prover/crates/sui-prover/tests/snapshots/inv/inv.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/inv/inv.ok.move:26:5
   │
26 │     }
   │     ^
   │
   =     at tests/inputs/inv/inv.ok.move:24: increment_spec
